# substreams-solana-staratlas-gm

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  env_init  env_init.sh  run_substream.sh  rust-toolchain.toml  schema.sql  substreams.clickhouse.yaml  substreams.prod.yaml  substreams.wasm  substreams.yaml
.github/workflows/: docker.yaml  main.yaml
data/clickhouse-server/: config.xml  users.xml
proto/: sol_token_program.proto  sol_transaction_instruction.proto  star_atlas_galactic_marketplace.proto
scripts/: entrypoint.sh  entrypoint_clickhouse.sh  env_init  init_substream.sh  run_substream.sh
src/: lib.rs
src/db/: db.rs
src/galactic_marketplace/: currencies.rs  galactic_marketplace.rs  gm.rs  gm_accounts.rs  gm_args.rs  mod.rs
src/helper/: base2String.rs  base2string.rs  mod.rs
src/lookup/: mod.rs
src/pb/: mod.rs  sa.gm.market.v1.rs  sol.token.program.v1.rs  sol.transaction.instruction.v1.rs
src/solana_token_program/: instruction.rs  mod.rs  token_program.rs  token_program_accounts.rs
