[package]
name = "substreams-staratlas-market"
version = "2.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-solana = "0.11.1"
substreams-database-change = "1.0.0"
anyhow = "1.0.75"
prost = "0.11"
prost-types = "0.11.8"
bs58 = "0.5.0"
base64 = "0.9.1"
borsh = "0.10.3"
log = "0.4.20"


[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
